// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`A FieldToggleSwitch 1`] = `
.c9 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c8 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #C1C6CC;
}

.c8:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(79,42,186,0.5);
}

.c7 {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c6 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c6 input {
  cursor: pointer;
}

.c6 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c5 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c1 .c10 {
  width: 100%;
}

.c1 .c11 {
  width: 100%;
}

.c1 .c3 {
  text-align: left;
  margin-right: 0;
  margin-left: 0.5rem;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3 c4"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c5"
  >
    <div
      className=""
    >
      <div
        className="c6 "
      >
        <input
          className="c7"
          id="thumbs-up"
          name="thumbsUp"
          role="switch"
          type="checkbox"
        />
        <div
          className="c8"
        >
          <div
            className="c9"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldToggleSwitch turned on 1`] = `
.c9 {
  -webkit-transform: translateX(0.9375rem);
  -ms-transform: translateX(0.9375rem);
  transform: translateX(0.9375rem);
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c8 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #6C43E0;
}

.c8:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(79,42,186,0.5);
}

.c7 {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c6 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c6 input {
  cursor: pointer;
}

.c6 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row-reverse;
  -ms-flex-direction: row-reverse;
  flex-direction: row-reverse;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c5 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c4 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c1 .c11 {
  width: 100%;
}

.c1 .c12 {
  width: 100%;
}

.c1 .c3 {
  text-align: left;
  margin-right: 0;
  margin-left: 0.5rem;
}

.c10 .c3 {
  text-align: right;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3 c4"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c5"
  >
    <div
      className=""
    >
      <div
        className="c6 "
      >
        <input
          aria-checked={true}
          checked={true}
          className="c7"
          id="thumbs-up"
          name="thumbsUp"
          role="switch"
          type="checkbox"
        />
        <div
          className="c8"
        >
          <div
            className="c9"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`A FieldToggleSwitch with label aligned left 1`] = `
.c9 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  bottom: 0.125rem;
  left: 0.125rem;
  width: 1rem;
  height: 1rem;
  border-radius: 50%;
  background: #FFFFFF;
}

.c8 {
  -webkit-transition: 300ms;
  transition: 300ms;
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  border-radius: 1.25rem;
  background: #C1C6CC;
}

.c8:hover {
  box-shadow: 0 0 .01rem 0.01rem rgba(79,42,186,0.5);
}

.c7 {
  opacity: 0;
  width: 100%;
  height: 100%;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
}

.c6 {
  width: 2.1875rem;
  height: 1.25rem;
  display: inline-block;
  position: relative;
  vertical-align: middle;
}

.c6 input {
  cursor: pointer;
}

.c6 input:focus + div {
  box-shadow: 0 0 0 0.2rem rgba(79,42,186,0.4);
}

.c2 {
  -webkit-align-items: left;
  -webkit-box-align: left;
  -ms-flex-align: left;
  align-items: left;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c5 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
}

.c0 {
  margin-bottom: 0.5rem;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
}

.c4 {
  color: #343C42;
  margin-right: 0.5rem;
  font-weight: 600;
  font-size: 0.75rem;
  display: inline-block;
}

.c10 .c3 {
  text-align: left;
  margin-right: 0;
  margin-left: 0.5rem;
}

.c1 .c11 {
  width: 100%;
}

.c1 .c12 {
  width: 100%;
}

.c1 .c3 {
  text-align: right;
}

<div
  className="c0 c1 "
>
  <div
    className="c2"
  >
    <label
      className="c3 c4"
      color="palette.charcoal700"
      fontSize="xsmall"
      fontWeight="semiBold"
      htmlFor="thumbs-up"
    >
      👍
    </label>
  </div>
  <div
    className="c5"
  >
    <div
      className=""
    >
      <div
        className="c6 "
      >
        <input
          className="c7"
          id="thumbs-up"
          name="thumbsUp"
          role="switch"
          type="checkbox"
        />
        <div
          className="c8"
        >
          <div
            className="c9"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
